Fixing the Issue with Overlay z-index

--- a/src/app/custom-form-control/select/select.component.scss
+++ b/src/app/custom-form-control/select/select.component.scss
@@ -16,6 +16,11 @@
       transform: scale(0.9);
     }
   }
+
+  &.select-panel-open {
+    position: relative;
+    z-index: 1001;
+  }
 }
 .label {
   font-size: 13px;
